# proteinCopilot

./: .dockerignore  .gitignore  .mcp.json  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  clean-code.agent.md  coder.agent.md  debugger.agent.md  planner.agent.md  prd-creation.agent.md  proteomics-search.agent.md  reviewer.agent.md  tester.agent.md
.github/instructions/: rust.instructions.md
.github/prompts/: basic-search.prompt.md  batch-search.prompt.md  database-management.prompt.md  dia-precursor-extraction.prompt.md  failure-diagnosis.prompt.md  prd-creation.prompt.md  protein-inference.prompt.md  result-interpretation.prompt.md  sage-search.prompt.md  spectrum-annotation.prompt.md  task-execution.prompt.md  task-generation.prompt.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: ai_decision.rs  diagnostics.rs  engine.rs  error.rs  label.rs  lib.rs  progress.rs  protein_group.rs  run_metadata.rs  search_params.rs  search_result.rs  spectrum.rs  util.rs
crates/dia-extraction/: Cargo.toml
crates/dia-extraction/src/: config.rs  correlation.rs  detection.rs  error.rs  extractor.rs  isotope.rs  lib.rs
crates/entrapment-analysis/: Cargo.toml
crates/entrapment-analysis/src/: coelution.rs  config.rs  digest.rs  error.rs  levenshtein.rs  lib.rs  mirror_plot.rs  mod_parser.rs  multi_provenance.rs  multi_report.rs  output.rs  provenance.rs  report.rs  similarity.rs  tagger.rs  types.rs
crates/entrapment-analysis/src/loader/: diann_parquet.rs  generic_tsv.rs  mod.rs  pfind_tsv.rs
crates/entrapment-analysis/templates/: entrapment_report.html
crates/entrapment-analysis/tests/: v2_edit_distance.rs  v3_e2e_provenance.rs  v4_multi_target.rs
crates/entrapment-cli/: Cargo.toml
crates/entrapment-cli/src/: main.rs
crates/fasta-db/: Cargo.toml
crates/fasta-db/src/: cache.rs  download.rs  error.rs  lib.rs  registry.rs
crates/fasta-db/tests/: integration.rs
crates/fdr/: Cargo.toml
crates/fdr/src/: calculation.rs  decoy.rs  error.rs  lib.rs  peptide_fdr.rs  protein_fdr.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: annotation_scenarios.rs  entrapment_integration.rs  import_pipeline.rs  search_pipeline.rs  xic_scenarios.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: catalog.rs  history.rs  main.rs  tools.rs
crates/param-recommend/: Cargo.toml
crates/param-recommend/src/: error.rs  hints.rs  lib.rs  preset.rs  rules.rs
crates/param-recommend/tests/: integration.rs
crates/protein-inference/: Cargo.toml
crates/protein-inference/src/: coverage.rs  error.rs  lib.rs  mapper.rs  parsimony.rs  razor.rs
crates/protein-inference/tests/: integration.rs
crates/report/: Cargo.toml
crates/report/src/: error.rs  export.rs  lib.rs  summary.rs  unified_types.rs  unified_visualize.rs  visualize.rs  xic3d_build.rs  xic3d_types.rs  xic3d_visualize.rs  xic_visualize.rs
crates/report/templates/: annotation.html  unified.html  xic.html  xic3d.html
crates/result-import/: Cargo.toml
crates/result-import/src/: converter.rs  custom_json.rs  diann.rs  error.rs  lib.rs  pfind.rs  pfind_tsv.rs  scan_matcher.rs  unimod.rs
crates/search-engine/: Cargo.toml
crates/search-engine/examples/: full_search.rs
crates/search-engine/src/: annotate.rs  chemistry.rs  digest.rs  error.rs  fasta.rs  lib.rs  matching.rs  progress.rs  registry.rs  simple_engine.rs  varmod.rs
crates/search-engine/src/adapters/: mod.rs  pfind.rs
crates/search-engine/src/adapters/sage/: config.rs  convert.rs  mod.rs
crates/search-engine/tests/: e2e_integration.rs  integration.rs  sage_integration.rs
crates/search-engine/tests/fixtures_e2e/: test_100.fasta  test_100.mgf
crates/spectrum-io/: Cargo.toml
crates/spectrum-io/examples/: read_spectra.rs
crates/spectrum-io/src/: disk_cache.rs  error.rs  index.rs  indexed_mgf.rs  indexed_mzml.rs  indexed_pfb.rs  lib.rs  mgf.rs  mzml.rs  pfb.rs  reader.rs  util.rs
crates/spectrum-io/tests/: integration.rs
crates/spectrum-io/tests/fixtures/: corrupt.mgf  corrupt.mzml  no_binary.mzml  small.mgf  small.mzml  small_indexed.mzml  truncated.mgf
crates/xic/: Cargo.toml
crates/xic/src/: error.rs  extract.rs  heavy.rs  lib.rs
docs/: architecture.html  architecture.md  configuration.md  development.md  entrapment-analysis.md  mcp-tools.md  presentation.html  user-guide.html
docs/levels/: L1-overview.md  L2-architecture.md  L3-entrapment.md  L3-fdr-protein.md  L3-mcp-server.md  L3-result-import.md  L3-search-engine.md  L3-spectrum-io.md  L3-xic-dia.md  L4-core.md  L4-dia-extraction.md  L4-entrapment-analysis.md  L4-entrapment-cli.md  L4-fasta-db.md  L4-fdr.md  L4-integration-tests.md  L4-mcp-server.md  L4-param-recommend.md  L4-protein-inference.md  L4-report.md  L4-result-import.md  L4-search-engine.md  L4-spectrum-io.md  L4-workspace.md  L4-xic.md  README.md
docs/superpowers/plans/: 2026-03-31-async-search-optimization.md  2026-03-31-spectrum-annotation.md  2026-04-02-dia-phase2-integration.md  2026-04-02-dia-run-search-integration.md  2026-04-03-audit-fixes.md  2026-04-03-dia-precursor-tools.md  2026-04-07-biology-audit-fixes.md  2026-04-08-architecture-html-showcase.md  2026-04-08-varmod-fdr.md  2026-04-08-xic-visualization.md  2026-04-09-external-results-import.md  2026-04-09-scan-index-cache.md  2026-04-11-rt-scan-lookup.md  2026-04-11-unified-xic-annotation.md  2026-04-13-silac-annotation-mirror-xic-fix.md  2026-04-13-silac-dia-dual-window.md  2026-04-14-integration-tests-zero-offset.md  (+22 more)
examples/: hela-mix-2da-entrapment.yaml  test_iso_error.rs
npm/: build-packages.js
npm/platform-template/: package.json
npm/protein-copilot-mcp/: package.json
output/: peptide.tsv  protein.tsv  psm.tsv  result.json  run_metadata.json
scripts/: gen_mcp_tools_doc.py
tasks/: 001-mvp-proteomics-search-platform.md  002-phase2-production-platform.md  003-entrapment-analysis.md
tests/fixtures/: pfind_sample.tsv  small_test.fasta  small_test.mgf
(+33 files in other folders)
