[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["uuid1", "chrono04"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Identifiers & time
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# XML / binary parsing
quick-xml = "0.37"
base64 = "0.22"
flate2 = "1"
memchr = "2"

# Internal crates
protein-copilot-core = { path = "crates/core" }
protein-copilot-spectrum-io = { path = "crates/spectrum-io" }
protein-copilot-param-recommend = { path = "crates/param-recommend" }
protein-copilot-search-engine = { path = "crates/search-engine" }
protein-copilot-report = { path = "crates/report" }
protein-copilot-fdr = { path = "crates/fdr" }
protein-copilot-dia-extraction = { path = "crates/dia-extraction" }
protein-copilot-xic = { path = "crates/xic" }
protein-copilot-result-import = { path = "crates/result-import" }
protein-copilot-protein-inference = { path = "crates/protein-inference" }

# HTTP client (for FASTA download)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Hashing
sha2 = "0.10"

# Internal
protein-copilot-fasta-db = { path = "crates/fasta-db" }

# Entrapment analysis
protein-copilot-entrapment-analysis = { path = "crates/entrapment-analysis" }
protein-copilot-entrapment-cli = { path = "crates/entrapment-cli" }

# YAML config
serde_yaml = "0.9"

# CSV I/O
csv = "1"

# CLI
clap = { version = "4", features = ["derive"] }
