[package]
name = "protein-copilot-entrapment-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Entrapment (trap-database) hit classification and homology analysis"

[dependencies]
protein-copilot-core = { workspace = true }
protein-copilot-search-engine = { workspace = true }
protein-copilot-spectrum-io = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
regex = "1"
csv = "1"
arrow = { version = "54", default-features = false, features = ["prettyprint"] }
parquet = { version = "54", default-features = false, features = ["arrow", "zstd", "snap", "lz4"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
