[package]
name = "protein-copilot-entrapment-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for entrapment (trap-database) hit classification"

[[bin]]
name = "entrapment"
path = "src/main.rs"

[dependencies]
protein-copilot-entrapment-analysis = { workspace = true }

clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
