[package]
name = "protein-copilot-fasta-db"
description = "FASTA database registry, download, and cache management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
