[package]
name = "protein-copilot-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP Server binary for ProteinCopilot"

[[bin]]
name = "protein-copilot-mcp"
path = "src/main.rs"

[dependencies]
protein-copilot-core = { workspace = true }
protein-copilot-spectrum-io = { workspace = true }
protein-copilot-param-recommend = { workspace = true }
protein-copilot-search-engine = { workspace = true }
protein-copilot-report = { workspace = true }
protein-copilot-dia-extraction = { workspace = true }

rmcp = { version = "1.3", features = ["server", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "6"
