[package]
name = "protein-copilot-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Report generation and result export for ProteinCopilot"

[dependencies]
protein-copilot-core = { workspace = true }
protein-copilot-search-engine = { workspace = true }
protein-copilot-xic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
