[package]
name = "protein-copilot-search-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Search engine orchestration and simplified search for ProteinCopilot"

[dependencies]
protein-copilot-core = { workspace = true }
protein-copilot-spectrum-io = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Added when implementing SimpleSearchEngine (Task 1.4.4):
# tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
protein-copilot-spectrum-io = { workspace = true }
tempfile = "3"
