[package]
name = "protein-copilot-search-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Search engine orchestration and simplified search for ProteinCopilot"

[dependencies]
protein-copilot-core = { workspace = true }
protein-copilot-spectrum-io = { workspace = true }
protein-copilot-fdr = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

# Added when implementing SimpleSearchEngine (Task 1.4.4):
tracing = { workspace = true }

[dev-dependencies]
protein-copilot-spectrum-io = { workspace = true }
protein-copilot-param-recommend = { workspace = true }
protein-copilot-report = { workspace = true }
tokio = { workspace = true }
tempfile = "3"
