[package]
name = "protein-copilot-search-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Search engine orchestration and simplified search for ProteinCopilot"

[dependencies]
protein-copilot-core = { workspace = true }
protein-copilot-spectrum-io = { workspace = true }
protein-copilot-fdr = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

# Added when implementing SimpleSearchEngine (Task 1.4.4):
tracing = { workspace = true }

# Sage search engine core (pinned to v0.15.0-beta.2, commit cd712d4)
sage-core = { git = "https://github.com/lazear/sage.git", rev = "cd712d4b88d6c4fe3b317d47ce39e2c83cae7642", package = "sage-core" }
rayon = "1"

[dev-dependencies]
protein-copilot-spectrum-io = { workspace = true }
protein-copilot-param-recommend = { workspace = true }
protein-copilot-report = { workspace = true }
tokio = { workspace = true }
tempfile = "3"
