[package]
name = "protein-copilot-xic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "XIC (Extracted Ion Chromatogram) extraction for ProteinCopilot"

[dependencies]
protein-copilot-core = { workspace = true }
protein-copilot-spectrum-io = { workspace = true }
protein-copilot-search-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
